// AUTOGENERATED - DO NOT EDIT
// ---------------------------
// This file has been generated by
// AOSP://external/perfetto/tools/gen_merged_trace_config
// merging the perfetto config protos.
// This fused proto is intended to be copied in:
//  - Android tree, for statsd.
//  - Google internal repos.

syntax = "proto2";

package perfetto.protos;

// Begin of protos/perfetto/trace/trace.proto

message Trace {
  repeated TracePacket packet = 1;

  // Do NOT add any other field here. This is just a convenience wrapper for
  // the use case of a trace being saved to a file. There are other cases
  // (streaming) where TracePacket are directly streamed without being wrapped
  // in a Trace proto. Nothing should ever rely on the full trace, all the
  // logic should be based on TracePacket(s).
}

// End of protos/perfetto/trace/trace.proto

// Begin of protos/perfetto/trace/trace_packet.proto

// The root object emitted by Perfetto. A perfetto trace is just a stream of
// TracePacket(s).
//
// Next id: 7.
message TracePacket {
  oneof data {
    FtraceEventBundle ftrace_events = 1;
    ProcessTree process_tree = 2;
    // removed field with id 4
    // removed field with id 5
    // removed field with id 6

    // IDs up to 32 are reserved for events that are quite frequent because they
    // take only one byte to encode their preamble.
    // removed field with id 33

    // This field is only used for testing.
    // removed field with id 536870911  // 2^29 - 1, max field id for protos.
  }
  // Trusted user id of the producer which generated this packet. Keep in sync
  // with TrustedPacket.trusted_uid.
  oneof optional_trusted_uid { int32 trusted_uid = 3; };
}

// End of protos/perfetto/trace/trace_packet.proto

// Begin of protos/perfetto/trace/ftrace/ftrace_event_bundle.proto

message FtraceEventBundle {
  optional uint32 cpu = 1;
  repeated FtraceEvent event = 2;
  // Total of all overwrite fields from the headers of all kernel
  // ftrace pages we parsed into this FtraceEventBundle. Zero if
  // no overwriting occurred, a number larger than zero if some overwriting
  // occurred.
  optional uint32 overwrite_count = 3;
}

// End of protos/perfetto/trace/ftrace/ftrace_event_bundle.proto

// Begin of protos/perfetto/trace/ftrace/ftrace_event.proto

message FtraceEvent {
  // Nanoseconds since an epoch.
  // Epoch is configurable by writing into trace_clock.
  // By default this timestamp is CPU local.
  // TODO: Figure out a story for reconciling the various clocks.
  optional uint64 timestamp = 1;

  optional uint32 pid = 2;

  oneof event {
    // removed field with id 3
    SchedSwitchFtraceEvent sched_switch = 4;
    // removed field with id 5
    // removed field with id 6
    // removed field with id 7
    // removed field with id 8
    // removed field with id 9
    // removed field with id 10
    CpuFrequencyFtraceEvent cpu_frequency = 11;
    // removed field with id 12
    CpuIdleFtraceEvent cpu_idle = 13;
    // removed field with id 14
    // removed field with id 15
    // removed field with id 16
    // removed field with id 17
    // removed field with id 18
    // removed field with id 19
    // removed field with id 20
    // removed field with id 21
    // removed field with id 22
    // removed field with id 23
    // removed field with id 24
    // removed field with id 25
    // removed field with id 26
    // removed field with id 27
    // removed field with id 28
    // removed field with id 29
    // removed field with id 30
    // removed field with id 31
    // removed field with id 32
    // removed field with id 33
    // removed field with id 34
    // removed field with id 35
    // removed field with id 36
    // removed field with id 37
    // removed field with id 38
    // removed field with id 39
    // removed field with id 40
    // removed field with id 41
    // removed field with id 42
    // removed field with id 43
    // removed field with id 44
    // removed field with id 45
    // removed field with id 46
    // removed field with id 47
    // removed field with id 48
    // removed field with id 49
    // removed field with id 50
    // removed field with id 51
    // removed field with id 52
    // removed field with id 53
    // removed field with id 54
    // removed field with id 55
    // removed field with id 56
    // removed field with id 57
    // removed field with id 58
    // removed field with id 59
    // removed field with id 60
    // removed field with id 61
    // removed field with id 62
    // removed field with id 63
    // removed field with id 64
    // removed field with id 65
    // removed field with id 66
    // removed field with id 67
    // removed field with id 68
    // removed field with id 69
    // removed field with id 70
    // removed field with id 71
    // removed field with id 72
    // removed field with id 73
    // removed field with id 74
    // removed field with id 75
    // removed field with id 76
    // removed field with id 77
    // removed field with id 78
    // removed field with id 79
    // removed field with id 80
    // removed field with id 81
    // removed field with id 82
    // removed field with id 83
    // removed field with id 84
    // removed field with id 85
    // removed field with id 86
    // removed field with id 87
    // removed field with id 88
    // removed field with id 89
    // removed field with id 90
    // removed field with id 91
    // removed field with id 92
    // removed field with id 93
    // removed field with id 94
    // removed field with id 95
    // removed field with id 96
    // removed field with id 97
    // removed field with id 98
    // removed field with id 99
    // removed field with id 100
    // removed field with id 101
    // removed field with id 102
    // removed field with id 103
    // removed field with id 104
    // removed field with id 105
    // removed field with id 106
    // removed field with id 107
    // removed field with id 108
    // removed field with id 109
    // removed field with id 110
    // removed field with id 111
    // removed field with id 112
    // removed field with id 113
    // removed field with id 114
    // removed field with id 115
    // removed field with id 116
    // removed field with id 117
    // removed field with id 118
    // removed field with id 119
    // removed field with id 120
    // removed field with id 121
    // removed field with id 122
    // removed field with id 123
    // removed field with id 124
    // removed field with id 125
    // removed field with id 126
    // removed field with id 128
    // removed field with id 129
    // removed field with id 130
    // removed field with id 131
    // removed field with id 132
    // removed field with id 133
    // removed field with id 134
    // removed field with id 135
    // removed field with id 136
    // removed field with id 137
    // removed field with id 138
    // removed field with id 139
    // removed field with id 140
    // removed field with id 141
    // removed field with id 142
    // removed field with id 143
    // removed field with id 144
    // removed field with id 145
    // removed field with id 146
    // removed field with id 147
    // removed field with id 148
    // removed field with id 149
    // removed field with id 150
    // removed field with id 151
    // removed field with id 152
    // removed field with id 153
    // removed field with id 154
    // removed field with id 155
    // removed field with id 156
    // removed field with id 157
    // removed field with id 158
    // removed field with id 159
    // removed field with id 160
    // removed field with id 161
    // removed field with id 162
    // removed field with id 163
    // removed field with id 164
    // removed field with id 165
    // removed field with id 166
    // removed field with id 167
    // removed field with id 168
    // removed field with id 169
    // removed field with id 170
    // removed field with id 171
    // removed field with id 172
    // removed field with id 173
    // removed field with id 174
    // removed field with id 175
    // removed field with id 176
    // removed field with id 177
    // removed field with id 178
    // removed field with id 179
    // removed field with id 180
    // removed field with id 181
    // removed field with id 182
    // removed field with id 183
    // removed field with id 184
    // removed field with id 185
    // removed field with id 186
    // removed field with id 187
    // removed field with id 188
    // removed field with id 189
    // removed field with id 190
    // removed field with id 191
    // removed field with id 192
    // removed field with id 193
    // removed field with id 194
    // removed field with id 195
    // removed field with id 196
    // removed field with id 197
    // removed field with id 198
    // removed field with id 199
    // removed field with id 200
    // removed field with id 201
    // removed field with id 202
    // removed field with id 203
    // removed field with id 204
    // removed field with id 205
    // removed field with id 206
    // removed field with id 207
    // removed field with id 208
    // removed field with id 209
    // removed field with id 210
    // removed field with id 211
    // removed field with id 212
    // removed field with id 213
    // removed field with id 214
    // removed field with id 215
    // removed field with id 216
    // removed field with id 217
    // removed field with id 218
    // removed field with id 219
    // removed field with id 230
    // removed field with id 231
    // removed field with id 232
    // removed field with id 233
    // removed field with id 234
    // removed field with id 235
    // removed field with id 236
    // removed field with id 237
    // removed field with id 238
    // removed field with id 239
    // removed field with id 240
    // removed field with id 241
    // removed field with id 242
  }
}

// End of protos/perfetto/trace/ftrace/ftrace_event.proto

// Begin of protos/perfetto/trace/ftrace/cpu_idle.proto

message CpuIdleFtraceEvent {
  optional uint32 state = 1;
  optional uint32 cpu_id = 2;
}

// End of protos/perfetto/trace/ftrace/cpu_idle.proto

// Begin of protos/perfetto/trace/ftrace/cpu_frequency.proto

message CpuFrequencyFtraceEvent {
  optional uint32 state = 1;
  optional uint32 cpu_id = 2;
}

// End of protos/perfetto/trace/ftrace/cpu_frequency.proto

// Begin of protos/perfetto/trace/ftrace/sched_switch.proto

message SchedSwitchFtraceEvent {
  optional string prev_comm = 1;
  optional int32 prev_pid = 2;
  optional int32 prev_prio = 3;
  optional int64 prev_state = 4;
  optional string next_comm = 5;
  optional int32 next_pid = 6;
  optional int32 next_prio = 7;
}

// End of protos/perfetto/trace/ftrace/sched_switch.proto

// Begin of protos/perfetto/trace/ps/process_tree.proto

message ProcessTree {
  // Representation of a thread
  message Thread {
    // The thread id (as per gettid())
    optional int32 tid = 1;

    // The name of the thread.
    optional string name = 2;
  }

  // Representation of a process.
  message Process {
    // The UNIX process ID, aka thread group ID (as per getpid()).
    optional int32 pid = 1;

    // The parent process ID, as per getppid().
    optional int32 ppid = 2;

    // The command line for the process, as per /proc/pid/cmdline.
    // If it is a kernel thread there will only be one cmdline field
    // and it will contain /proc/pid/comm.
    repeated string cmdline = 3;

    // The list of all threads in the process.
    repeated Thread threads = 4;
  }

  // List of all processes in the client.
  repeated Process processes = 1;
}

// End of protos/perfetto/trace/ps/process_tree.proto
